updated routes for challenge

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,16 @@
-<h1>All Restaurants</h1>
-<div id="restaurants">
-  <% @restaurants.each do |restaurant| %>
-    <%= restaurant.name %>
-    <p>
-      <%= link_to "Show this restaurant", restaurant %>
-    </p>
-  <% end %>
+<div>
+  <h1 class="landing-page-header">All Restaurants</h1>
 </div>
 
-<div>
-<%= link_to "Add a new restaurant", new_restaurant_path %>
+<div class="text-center mb-6">
+  <%= link_to "Add a new restaurant", new_restaurant_path %>
 </div>
+
+<% @restaurants.each do |restaurant| %>
+  <div class="card restaurant-card text-center mx-auto my-2" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><%= restaurant.name %></h5>
+      <%= link_to "Show this restaurant", restaurant %>
+    </div>
+  </div>
+<% end %>
