--- a/app/views/restaurants/_restaurant_form.html.erb
+++ b/app/views/restaurants/_restaurant_form.html.erb
@@ -3,5 +3,7 @@
   <%= f.text_field :name %>
   <%= f.label :address %>
   <%= f.text_field :address %>
+  <%= f.label :category %>
+  <%= f.select :category, ["chinese", "italian", "japanese", "french", "belgian"] %>
   <%= f.submit %>
 <% end %>
